--- a/system/src/main/resources/i18n/system_en_US.properties
+++ b/system/src/main/resources/i18n/system_en_US.properties
@@ -29,3 +29,12 @@ sys.dict.label.dictType=Dictionary Type
 sys.dict.label.dictDescTip=Please enter a dictionary description
 sys.dict.tip.existsDict=Dictionary already exists
 sys.dict.tip.delDictSure=Are you sure to delete this dictionary ?
+
+sys.user.field.username=User Name
+sys.user.field.password=Password
+sys.user.field.name=Name
+sys.user.field.idCardNo=ID Card No
+sys.user.field.state=Status
+sys.user.field.state.normal=Normal
+sys.user.field.state.locked=Locked
+sys.user.label.accountOrNameTip=Please enter a account or name
