--- a/system/src/main/resources/i18n/system_zh_CN.properties
+++ b/system/src/main/resources/i18n/system_zh_CN.properties
@@ -29,3 +29,12 @@ sys.dict.label.dictType=\u5b57\u5178\u7c7b\u578b
 sys.dict.label.dictDescTip=\u8bf7\u8f93\u5165\u5b57\u5178\u63cf\u8ff0
 sys.dict.tip.existsDict=\u5b57\u5178\u5df2\u5b58\u5728
 sys.dict.tip.delDictSure=\u786e\u8ba4\u5220\u9664\u8be5\u5b57\u5178\u5417\uff1f
+
+sys.user.field.username=\u7528\u6237\u540d
+sys.user.field.password=\u5bc6\u7801
+sys.user.field.name=\u59d3\u540d
+sys.user.field.idCardNo=\u8eab\u4efd\u8bc1\u53f7
+sys.user.field.state=\u72b6\u6001
+sys.user.field.state.normal=\u6b63\u5e38
+sys.user.field.state.locked=\u9501\u5b9a
+sys.user.label.accountOrNameTip=\u8bf7\u8f93\u5165\u7528\u6237\u540d\u6216\u59d3\u540d
