--- a/game/src/main/resources/i18n/game_zh_CN.properties
+++ b/game/src/main/resources/i18n/game_zh_CN.properties
@@ -16,3 +16,43 @@ vote.itemGroup.field.type=\u7c7b\u578b
 vote.itemGroup.field.type.single=\u5355\u9009
 vote.itemGroup.field.type.multiple=\u591a\u9009
 vote.itemGroup.tip.delSure=\u786e\u8ba4\u5220\u9664\u8be5\u5206\u7ec4\u5417
+vote.itemGroup.tip.nameEmpty=\u6295\u7968\u5206\u7ec4\u540d\u4e0d\u80fd\u4e3a\u7a7a
+
+vote.item.field.id=\u7f16\u53f7
+vote.item.field.name=\u540d\u79f0
+vote.item.field.value=\u503c
+vote.item.field.description=\u63cf\u8ff0
+vote.item.field.groupName=\u7ec4\u540d\u79f0
+vote.item.tip.delSure=\u786e\u5b9a\u5220\u9664\u8be5\u9009\u9879\u5417\uff1f
+
+vote.field.id=\u7f16\u53f7
+vote.field.title=\u6807\u9898
+vote.field.subTitle=\u526f\u6807\u9898
+vote.field.startTime=\u5f00\u59cb\u65f6\u95f4
+vote.field.endTime=\u7ed3\u675f\u65f6\u95f4
+vote.field.templateName=\u6a21\u677f\u540d\u79f0
+vote.field.creator=\u53d1\u8d77\u4eba
+vote.field.createTime=\u53d1\u8d77\u65f6\u95f4
+vote.field.status=\u72b6\u6001
+vote.field.status.ready=\u672a\u5f00\u59cb
+vote.field.status.start=\u8fdb\u884c\u4e2d
+vote.field.status.pause=\u6682\u505c
+vote.field.status.finish=\u7ed3\u675f
+vote.field.status.discard=\u5e9f\u5f03
+vote.title.tip=\u8bf7\u8f93\u5165\u6807\u9898
+vote.subTitle.tip=\u8bf7\u8f93\u5165\u526f\u6807\u9898
+vote.tip.delSure=\u786e\u8ba4\u5220\u9664\u8be5\u6295\u7968\uff1f
+vote.tip.createVoteThemeTip=\u8bf7\u53d1\u8d77\u4e00\u4e2a\u6295\u7968\u4e3b\u9898\uff0c\u8ba9\u5927\u5bb6\u53c2\u4e0e\u8d77\u6765\u5427\uff01
+vote.tip.voteTheme=\u6295\u7968\u4e3b\u9898
+vote.tip.voteContent=\u6295\u7968\u5185\u5bb9
+vote.tip.voteMode=\u6295\u7968\u65b9\u5f0f
+vote.tip.voteGroup=\u6295\u7968\u5206\u7ec4
+vote.tip.voteOption=\u6295\u7968\u9009\u9879
+vote.btn.label.delGroup=\u79fb\u9664\u7ec4
+vote.btn.label.delItem=\u79fb\u9664\u9879
+vote.btn.label.addItem=\u65b0\u589e\u9879
+vote.btn.launch=\u53d1\u8d77
+vote.btn.voting=\u6295\u7968
+vote.tip.finishVote=\u6295\u7968\u5df2\u7ed3\u675f
+vote.tip.dataIncomplet=\u6295\u7968\u6570\u636e\u4e0d\u5b8c\u6574
+vote.tip.myVote=\u6211\u7684\u6295\u7968
