--- a/webapp/src/main/resources/i18n/common_en_US.properties
+++ b/webapp/src/main/resources/i18n/common_en_US.properties
@@ -20,6 +20,7 @@ com.btn.oper=Operation
 com.btn.reset=Reset
 
 com.select.all=All
+com.time=Time
 
 com.layer.title1=Tips
 com.layer.title2=Warn
@@ -27,3 +28,5 @@ com.layer.title3=Error
 
 com.success=Success
 com.failure=Failure
+
+com.goBack=Back
