--- a/webapp/src/main/resources/i18n/common_zh_CN.properties
+++ b/webapp/src/main/resources/i18n/common_zh_CN.properties
@@ -20,6 +20,7 @@ com.btn.oper=\u64cd\u4f5c
 com.btn.reset=\u91cd\u7f6e
 
 com.select.all=\u5168\u90e8
+com.time=\u65f6\u95f4
 
 com.layer.title1=\u63d0\u793a
 com.layer.title2=\u8b66\u544a
@@ -27,3 +28,5 @@ com.layer.title3=\u9519\u8bef
 
 com.success=\u6210\u529f
 com.failure=\u5931\u8d25
+
+com.goBack=\u8fd4\u56de
