--- a/system/src/main/resources/i18n/system_en_US.properties
+++ b/system/src/main/resources/i18n/system_en_US.properties
@@ -45,3 +45,7 @@ sys.user.tip.delUser=Are you sure to delete this user ?
 sys.role.field.id=ID
 sys.role.field.name=Name
 sys.role.tip.delRole=Are you sure to delete this role ?
+sys.role.tip.permissionSet=Permission settings
+sys.role.tip.existsName=Role already exists
+sys.role.tip.selectRole=Please select a role
+sys.role.tip.selectPermissions=Please check the resource permission to be set
