--- a/webapp/src/main/resources/i18n/common_en_US.properties
+++ b/webapp/src/main/resources/i18n/common_en_US.properties
@@ -18,6 +18,8 @@ com.btn.export=Export
 com.btn.excel=Excel
 com.btn.oper=Operation
 com.btn.reset=Reset
+com.btn.auth=Authorize
+com.btn.save=Save
 
 com.select.all=All
 com.time=Time
