--- a/webapp/src/main/resources/i18n/common_zh_CN.properties
+++ b/webapp/src/main/resources/i18n/common_zh_CN.properties
@@ -18,6 +18,8 @@ com.btn.export=\u5bfc\u51fa
 com.btn.excel=Excel
 com.btn.oper=\u64cd\u4f5c
 com.btn.reset=\u91cd\u7f6e
+com.btn.auth=\u6388\u6743
+com.btn.save=\u4fdd\u5b58
 
 com.select.all=\u5168\u90e8
 com.time=\u65f6\u95f4
