--- a/system/src/main/resources/i18n/system_zh_CN.properties
+++ b/system/src/main/resources/i18n/system_zh_CN.properties
@@ -45,3 +45,7 @@ sys.user.tip.delUser=\u786e\u5b9a\u5220\u9664\u8be5\u7528\u6237\u5417\uff1f
 sys.role.field.id=\u7f16\u53f7
 sys.role.field.name=\u540d\u79f0
 sys.role.tip.delRole=\u786e\u8ba4\u5220\u9664\u8be5\u89d2\u8272\uff1f
+sys.role.tip.permissionSet=\u6743\u9650\u8bbe\u7f6e
+sys.role.tip.existsName=\u89d2\u8272\u5df2\u5b58\u5728
+sys.role.tip.selectRole=\u8bf7\u9009\u62e9\u4e00\u4e2a\u89d2\u8272
+sys.role.tip.selectPermissions=\u8bf7\u52fe\u9009\u9700\u8981\u8bbe\u7f6e\u7684\u8d44\u6e90\u6743\u9650
