--- a/system/src/main/resources/i18n/system_en_US.properties
+++ b/system/src/main/resources/i18n/system_en_US.properties
@@ -49,3 +49,15 @@ sys.role.tip.permissionSet=Permission settings
 sys.role.tip.existsName=Role already exists
 sys.role.tip.selectRole=Please select a role
 sys.role.tip.selectPermissions=Please check the resource permission to be set
+
+sys.resource.field.id=ID
+sys.resource.field.name=Name
+sys.resource.field.url=URL
+sys.resource.field.type=Type
+sys.resource.field.type.menu=Menu
+sys.resource.field.type.tab=Tab
+sys.resource.field.type.btn=Button
+sys.resource.field.parentName=Parent Name
+sys.resource.field.icon=Icon
+sys.resource.tip.existsName=Resource alreay exists
+sys.resource.tip.selectResource=Please select a resource
