--- a/system/src/main/resources/i18n/system_zh_CN.properties
+++ b/system/src/main/resources/i18n/system_zh_CN.properties
@@ -49,3 +49,15 @@ sys.role.tip.permissionSet=\u6743\u9650\u8bbe\u7f6e
 sys.role.tip.existsName=\u89d2\u8272\u5df2\u5b58\u5728
 sys.role.tip.selectRole=\u8bf7\u9009\u62e9\u4e00\u4e2a\u89d2\u8272
 sys.role.tip.selectPermissions=\u8bf7\u52fe\u9009\u9700\u8981\u8bbe\u7f6e\u7684\u8d44\u6e90\u6743\u9650
+
+sys.resource.field.id=\u7f16\u53f7
+sys.resource.field.name=\u540d\u79f0
+sys.resource.field.url=URL
+sys.resource.field.type=\u7c7b\u578b
+sys.resource.field.type.menu=\u83dc\u5355
+sys.resource.field.type.tab=tab\u9875
+sys.resource.field.type.btn=\u6309\u94ae
+sys.resource.field.parentName=\u4e0a\u7ea7\u540d\u79f0
+sys.resource.field.icon=\u56fe\u6807
+sys.resource.tip.existsName=\u8d44\u6e90\u5df2\u5b58\u5728
+sys.resource.tip.selectResource=\u8bf7\u9009\u62e9\u4e00\u4e2a\u8d44\u6e90
