1.系统配置 2.中文转unicode小工具

--- a/system/src/main/resources/i18n/system_en_US.properties
+++ b/system/src/main/resources/i18n/system_en_US.properties
@@ -61,3 +61,10 @@ sys.resource.field.parentName=Parent Name
 sys.resource.field.icon=Icon
 sys.resource.tip.existsName=Resource alreay exists
 sys.resource.tip.selectResource=Please select a resource
+
+sys.config.tip.searchKey=Please enter a searchKey
+sys.config.field.projectName=Project Name
+sys.config.field.name=Name
+sys.config.field.key=Key
+sys.config.field.val=Value
+sys.config.field.content=Content
