--- a/system/src/main/resources/i18n/system_zh_CN.properties
+++ b/system/src/main/resources/i18n/system_zh_CN.properties
@@ -61,3 +61,10 @@ sys.resource.field.parentName=\u4e0a\u7ea7\u540d\u79f0
 sys.resource.field.icon=\u56fe\u6807
 sys.resource.tip.existsName=\u8d44\u6e90\u5df2\u5b58\u5728
 sys.resource.tip.selectResource=\u8bf7\u9009\u62e9\u4e00\u4e2a\u8d44\u6e90
+
+sys.config.tip.searchKey=\u8bf7\u8f93\u5165\u4e00\u4e2a\u5173\u952e\u5b57
+sys.config.field.projectName=\u5de5\u7a0b\u540d
+sys.config.field.name=\u540d\u79f0
+sys.config.field.key=\u952e
+sys.config.field.val=\u503c
+sys.config.field.content=\u5185\u5bb9
